--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   google_maps_flutter: ^2.1.2
   flutter_polyline_points: ^1.0.0
   dio: ^4.0.4
+  rounded_loading_button: ^2.1.0
 
 
 dev_dependencies:
