--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_polyline_points: ^1.0.0
   dio: ^4.0.4
   rounded_loading_button: ^2.1.0
+  latlong2: ^0.8.1
 
 
 dev_dependencies:
