--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,7 @@ dependencies:
   google_maps_flutter: ^2.1.2
   flutter_polyline_points: ^1.0.0
   dio: ^4.0.4
-  rounded_loading_button: ^2.1.0
-  latlong2: ^0.8.1
+  http: ^0.13.4
 
 
 dev_dependencies:
@@ -61,6 +60,8 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/light.json
+    - assets/images/src.png
+    - assets/images/dst.png
   fonts:
     - family: CustomIcon
       fonts:
