--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,8 @@ dependencies:
   google_maps_flutter: ^2.1.2
   flutter_polyline_points: ^1.0.0
   dio: ^4.0.4
-  rounded_loading_button: ^2.1.0
-  latlong2: ^0.8.1
+  google_maps_routes: ^1.1.2
+  google_maps_widget: ^1.0.1
 
 
 dev_dependencies:
