--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   custom_map_markers: ^0.0.1 #used for google maps marker
   line_awesome_flutter: ^2.0.0 #used for line icons
   flutter_compass: '^0.7.0'
+  syncfusion_flutter_maps: ^19.4.56-beta
 
 
 dev_dependencies:
