--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -25,7 +25,6 @@ dependencies:
     sdk: flutter
   search_page: ^2.0.0+1
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
@@ -36,8 +35,9 @@ dependencies:
   dio: ^4.0.4
   custom_map_markers: ^0.0.1 #used for google maps marker
   line_awesome_flutter: ^2.0.0 #used for line icons
-  flutter_compass: '^0.7.0'
-
+  flutter_compass: "^0.7.0"
+  font_awesome_flutter: ^10.1.0
+  google_fonts: ^2.3.1
 
 dev_dependencies:
   flutter_test:
@@ -45,13 +45,11 @@ dev_dependencies:
   flutter_launcher_icons: "^0.9.2"
   build_runner: ^1.3.1
 
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -60,7 +58,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/icons/
+    # - assets/icons/
     - assets/light.json
     - assets/images/charging.png
   fonts:
