--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ev_homegrid">
 
-    //<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
@@ -9,7 +9,7 @@
         android:label="ev_homegrid"
         android:icon="@mipmap/ic_launcher">
 
-        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyCeCEAAdBUCtWGltF2RM_YpukKhK4Wf17Y"/>
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyDBiRGvyGsmTThjfe1cwZNGhmwaxYW1kVA"/>
 
         <activity
             android:name=".MainActivity"
@@ -29,7 +29,7 @@
 
 
             <meta-data android:name="com.google.android.geo.API_KEY"
-              android:value="AIzaSyBPVmFIW-OGZSrk2u5lfVov64M-GloBgXI"
+              android:value="AIzaSyCPbmxnQkPJd5R8UFulT1U1GeHVxu0u8VE"
                />
 
 
