--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,8 @@ dependencies:
   flutter_svg: ^1.0.3
   google_maps_flutter: ^2.1.2
   flutter_polyline_points: ^1.0.0
-  dio: ^4.0.4
-  custom_map_markers: ^0.0.1 #used for google maps marker
   line_awesome_flutter: ^2.0.0 #used for line icons
-  google_maps_routes: ^1.1.2
+  permission_handler: ^9.2.0
 
 
 dev_dependencies:
@@ -62,7 +60,6 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/light.json
-    - assets/images/charging.png
   fonts:
     - family: CustomIcon
       fonts:
