--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,15 +29,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   flutter_web3: ^2.1.9
-  flutter_svg: ^1.0.3
-  google_maps_flutter: ^2.1.2
+  dio: ^4.0.6
+  google_maps_flutter: ^2.1.3
   flutter_polyline_points: ^1.0.0
   line_awesome_flutter: ^2.0.0 #used for line icons
 
-  flutter_compass: "^0.7.0"
   font_awesome_flutter: ^10.1.0
   google_fonts: ^2.3.1
-  google_maps_routes: ^1.1.2
 
   permission_handler: ^9.2.0
 
