--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   flutter_web3: ^2.1.9
-  dio: ^4.0.6
-  google_maps_flutter: ^2.1.3
-  flutter_polyline_points: ^1.0.0
+  google_maps_flutter: ^2.1.3 # For Google Maps
+  flutter_polyline_points: ^1.0.0 #used for map path
   line_awesome_flutter: ^2.0.0 #used for line icons
+  dio: ^4.0.6
+  carousel_slider: ^4.0.0
 
   font_awesome_flutter: ^10.1.0
   google_fonts: ^2.3.1
