--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,11 @@ dependencies:
   carousel_slider: ^4.0.0
   flutter_animated_button: ^2.0.0
   after_layout: ^1.1.0
+  sliding_up_panel: ^2.0.0+1
 
   font_awesome_flutter: ^10.1.0
   google_fonts: ^2.3.1
 
-  permission_handler: ^9.2.0
 
 dev_dependencies:
   flutter_test:
