--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
 
   permission_handler: ^9.2.0
 
+  material_floating_search_bar: ^0.3.7 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
