--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_animated_button: ^2.0.0
   after_layout: ^1.1.0
   sliding_up_panel: ^2.0.0+1
+  flutter_onboarding_slider: ^1.0.7
+  persistent_bottom_nav_bar: ^4.0.2
 
   font_awesome_flutter: ^10.1.0
   google_fonts: ^2.3.1
@@ -61,6 +63,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/login/
     # - assets/icons/
     - assets/light.json
   fonts:
