--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,11 +47,22 @@ dependencies:
   material_floating_search_bar: ^0.3.7
   place_picker: ^0.9.20-nullsafety
 
+  #v2
+  web3dart: ^2.3.5
+  http: ^0.13.4
+  code_builder: ^4.1.0
+  flutter_network_connectivity: ^0.0.6
+  loading_indicator: ^3.0.3
+  animated_text_kit: ^4.2.1
+  internet_popup: ^1.0.4
+  syncfusion_flutter_sliders: ^20.1.50
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: "^0.9.2"
-  build_runner: ^1.3.1
+  # build_runner: ^1.3.1
+  build_runner: ^2.1.10
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -65,6 +76,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/web3dart/
     - assets/images/
     - assets/images/login/
     # - assets/icons/
