--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   animated_text_kit: ^4.2.1
   internet_popup: ^1.0.4
   syncfusion_flutter_sliders: ^20.1.50
+  styled_text: ^5.1.0
+  #animations: ^2.0.2
 
 dev_dependencies:
   flutter_test:
