--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   styled_text: ^5.1.0
   expansion_widget: ^0.0.3
   google_place: ^0.4.7
+  geocoding: ^2.0.4
+  # flutter_google_places: ^0.3.0
   #animations: ^2.0.2
 
 dev_dependencies:
