--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   expansion_widget: ^0.0.3
   google_place: ^0.4.7
   geocoding: ^2.0.4
+  geolocator: ^8.2.1
   # flutter_google_places: ^0.3.0
   #animations: ^2.0.2
 
