--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   google_place: ^0.4.7
   geocoding: ^2.0.4
   geolocator: ^8.2.1
+  maps_toolkit: ^2.0.0
+  custom_info_window: ^1.0.1
   # flutter_google_places: ^0.3.0
   #animations: ^2.0.2
 
