--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,9 @@ dependencies:
   geolocator: ^8.2.1
   maps_toolkit: ^2.0.0
   custom_info_window: ^1.0.1
+  url_launcher: ^6.1.2
+  map_launcher: ^2.2.2
+  flutter_dotenv: ^5.0.2
   # flutter_google_places: ^0.3.0
   #animations: ^2.0.2
 
@@ -85,6 +88,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/.env
     - assets/web3dart/
     - assets/images/
     - assets/images/login/
