--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   url_launcher: ^6.1.2
   map_launcher: ^2.2.2
   flutter_dotenv: ^5.0.2
+  another_flushbar: ^1.10.28
   # flutter_google_places: ^0.3.0
   #animations: ^2.0.2
 
