--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,12 +44,15 @@ dependencies:
   google_fonts: ^2.3.1
   place_picker: ^0.9.19-nullsafety
   input_history_text_field: ^0.1.0
+  syncfusion_flutter_charts: ^20.1.55
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: "^0.9.2"
   build_runner: ^1.3.1
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
