--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   map_launcher: ^2.2.2
   flutter_dotenv: ^5.0.2
   another_flushbar: ^1.10.28
+  intl: ^0.17.0 #date 
   # flutter_google_places: ^0.3.0
   #animations: ^2.0.2
 
